# openwrt

./: feeds.conf.default
package/libs/jose/: Makefile
package/own/jose/: Makefile
package/own/tang/: Makefile
package/own/tang/src/: Makefile.am  configure.ac  tangdw  tangdx
package/utils/tang/: Makefile
package/utils/tang/files/: tangdx
package/utils/tang/src/: configure.ac  dif  tangdw
package/utils/tang/src/src/: tangd-update
